# fast_rub

./: .gitignore  Client.py  LICENSE  README.md  __init__.py  api_.py  api_end_point.py  async_sync.py  client.py  colors.py  create.bat  create.sh  fast_rub.toal  filters.py  logger.py  old_setup.py  prop.py  publish.bat  publish.sh  pyproject.toml  requirements.txt  setup.py  version.py
.github/: CODEOWNERS
BOTs/self-bot/: requirements.txt
BOTs/tests/: __init___Cliant.py  auto_edit.py  edit_message_text.py  filters_on_message.py  get_chat.py  get_me.py  on_button.py  on_message.py  send_text.py
api/: api_end_point_private_fastapi.py  api_end_point_private_flask.py  api_end_point_public_fastapi.py  api_end_point_public_flask.py
docs/: index.html  main.7a952b86.min.css  style.css
docs/methods/: index.html
docs/models/: index.html
fast_rub/: Client.py  __init__.py  cli.py  errors.py  filters.py  pyrightconfig.json  run_filter.py  version.py
fast_rub/button/: key_pad.py
fast_rub/core/: __init__.py  async_sync.py  background.py  client.py  conversation.py  converstaion.py  helpers.py  hotreload.py  middleware.py  plugins.py  scheduler.py  signals.py  webhook_server.py
fast_rub/db/: database.py  message_keeper.py  session.py
fast_rub/network/: network.py
fast_rub/pyrubi/: enums.py  exceptions.py  filters.py
fast_rub/type/: Update.py  __init__.py  errors.py  metadata.py  prop_update.py  update.py  webhook.py
fast_rub/types/: __init__.py  (+7 more)
iniline/: KeyPad.py  __init__.py
methods/: __init__.py
pyrubi/: __init__.py
type/: Update.py  __init__.py
(+53 files in other folders)
